MAINT-3088 Fix SonarQube issues in FHIR package (Phase 1: bugs + safe cleanups)